# pandion

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
pandion/: .coverage  utils.py
pandion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pandion/pandion.egg-info/: PKG-INFO
requirements/: dev
tests/: test_utils.py
