[metadata]
name = pandion
description = data utils package
author = Mohammed Rafik Mammeri
licence = MIT
licence_file = LICENSE
platforms = unix, linux, osx, cygwin, win32

[options]
packages =
    pandion
install-requires =
    pandas>=1.4.3
python_requires = >=3.6
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
pandion = py.typed # this indicates that the pandion package is typehinted

[flake8]
max_line_length = 160

